@@ -5,6 +5,8 @@
 - Write test for and fixed midnight outages in PollOutageConfigManager, Bug 1122
 - Fix GETBULK in SnmpIfCollector to handle cases where indices are not
   contiguous.  Fixed ArrayIndexOutOfBound exceptions. Bug 1141
+- Add RESOLVED: to body of email and pager msgs.  Unit tests include. Bug 1134.  
+  Thnx mhuot and bill ayres.
 
 1.1.5 to 1.2.0
 ----------------------------------------------------------------------
